--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ notifications:
   email: false
 
 language: java
+rvm: 2.6.4
 python: 3
 
 service:
@@ -94,6 +95,29 @@ jobs:
       script: bash -c './gradlew ${GITHUB_AUTH} reckonTagPush -Preckon.stage=final'
       on:
         branch: master
+
+  - stage: deploy
+    jdk: openjdk11
+    rvm: 2.6.4
+    name: Jekyll GitHub Pages
+    script: skip
+    if: branch = "master" AND type NOT IN (pull_request)
+    before_deploy:
+      - if [ "$TRAVIS_PULL_REQUEST" != "false" ] || [ ".$TRAVIS_BRANCH" != ".master" ] ; then exit 0 ; fi
+      - set -e
+      - ./gradlew bundle
+      - ./gradlew bundle-exec-just-the-docs-rake-search-init
+      - ./gradlew bundle-exec-jekyll-build
+    deploy:
+      provider: pages
+      skip-cleanup: true
+      github-token: "$GITHUB_TOKEN"
+      keep-history: true
+      local-dir: docs/_site
+      target_branch: gh-pages
+      on:
+        branch: master
+        condition: "$TRAVIS_PULL_REQUEST = false"
 
 cache:
   pip: true
