--- a/.travis.yml
+++ b/.travis.yml
@@ -105,7 +105,7 @@ jobs:
       script: bash -c './gradlew ${GITHUB_AUTH} reckonTagPush -Preckon.stage=final'
       on:
         branch: master
-#        condition: "$TRAVIS_PULL_REQUEST == false"
+        condition: "$TRAVIS_PULL_REQUEST == false"
     - provider: pages
       skip-cleanup: true
       github-token: "$GITHUB_TOKEN"
@@ -114,7 +114,7 @@ jobs:
       target_branch: gh-pages
       on:
         branch: master
-#        condition: "$TRAVIS_PULL_REQUEST == false"
+        condition: "$TRAVIS_PULL_REQUEST == false"
 
 cache:
   pip: true
